tests/workflow/negative/simple-undef.s
global int x;

@initial
go()
{
  y = x;
  terminate();
}
